--- a/package.json
+++ b/package.json
@@ -10,14 +10,15 @@
   "devDependencies": {
     "aliasify": "^1.7.2",
     "axis": "^0.3.1",
-    "babelify": "^5.0.4",
-    "browserify": "^9.0.4",
+    "babelify": "^6.0.1",
+    "browserify": "^9.0.6",
     "browserify-shim": "^3.8.3",
     "del": "^1.1.1",
     "gulp": "^3.8.11",
     "gulp-autoprefixer": "^2.1.0",
     "gulp-concat": "^2.5.2",
     "gulp-minify-css": "^1.0.0",
+    "gulp-qiniu": "0.0.9",
     "gulp-sourcemaps": "^1.5.1",
     "gulp-stylus": "^2.0.1",
     "gulp-uglify": "^1.1.0",
