--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "dependencies": {
     "express": "^3.4.4",
     "jade": "^1.9.2",
-    "lodash-node": "^3.6.0"
+    "lodash-node": "^3.6.0",
+    "method-override": "^2.3.2"
   },
   "devDependencies": {
     "aliasify": "^1.7.2",
